--- a/.github/workflows/CD.yml
+++ b/.github/workflows/CD.yml
@@ -17,4 +17,4 @@ jobs:
       - name: Delete Old Docker Container
         run: sudo docker rm -f titanic-fastapi-container || true
       - name: Run Docker Container
-        run: sudo docker run -d -p 8080:8080
+        run: sudo docker run -d -p 8080:8080 --name titanic-fastapi-container hiteshsharma97/titanic-fastapi
